...
                                <color key="backgroundColor" red="0.42352941179999998" green="0.23529411759999999" blue="0.54901960780000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="Lff-ZH-Xrn"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Place Order">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="16"/>
                                </buttonConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadious">
                                        <integer key="value" value="5"/>
                                    </userDefinedRuntimeAttribute>
...
